# queries-basedosdados

./: .dbtignore  .gitignore  .pre-commit-config.yaml  .user.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  dbt_project.yml  docker-compose.yaml  kustomization.yaml  metadata.json  metadata.yaml  packages.yml  profiles.yml  pyproject.toml  requirements-actions.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  start-server.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  code-docs.yml  deactivate-pipeline.yml  feature-request.yml  issue--novos-dados.md  new-data.yml
.github/workflows/: cd.yaml  check-bq-project-name.yml  ci-dbt.yaml  deploy.yaml  docs.yaml  elementary.yaml  elementary.yml  lint_docker.yaml  metadata-to-prod.yaml  metadata_automation.yaml  sync-dbt-schema.yaml  table-approve.yaml  test_dbt_model.yaml  triggers-elementary-model.yaml  triggers_elementary_model.yml
.kubernetes/: deployment.yaml  service.yaml
downloaded_data/: table_approve_temp_file_271828.csv
gists/: automated_pretreatment.py  schema_as_yml.sh
macros/: cnes_columns_standartization.sql  custom_get_where_subquery.sql
models/br_anatel_banda_larga_fixa/: br_anatel_banda_larga_fixa__densidade_brasil.sql  br_anatel_banda_larga_fixa__densidade_brasil_atualizado.sql  br_anatel_banda_larga_fixa__densidade_municipio.sql  br_anatel_banda_larga_fixa__densidade_municipio_atualizado.sql  br_anatel_banda_larga_fixa__densidade_uf.sql  br_anatel_banda_larga_fixa__densidade_uf_atualizado.sql  br_anatel_banda_larga_fixa__microdados.sql  (+3 more)
(+1085 files in other folders)
